--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "dotenv": "^16.3.2",
     "fs": "^0.0.1-security",
+    "mathjs": "^13.0.3",
     "node-fetch": "^2.7.0",
     "node-fetch-commonjs": "^3.3.2",
     "node-telegram-bot-api": "^0.63.0",
